Update DashBoard layout

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -8,7 +8,7 @@
     "sign-up": "Sign Up",
     "have-account": "Have an account?",
     "log-in": "Log in",
-    "download-authenticator": "Please download Microsoft Authenticator to scan the QR code",
+    "download-authenticator": "Please download Microsoft Authenticator to scan QR code",
     "next": "Next",
     "full-name": "Full name",
     "date-of-birth": "Date of birth",
