Update Dashboard layout and convention code

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,6 +1,6 @@
 {
     "locale": "EN",
-    "sign-in": "Sign in",
+    "sign-in": "Log in",
     "email-address": "Email Address",
     "password": "Password",
     "remember-me": "Remember me",
